added paragraph spacing configuration

--- a/config/tugraz-template.sty
+++ b/config/tugraz-template.sty
@@ -46,6 +46,9 @@
 % Paragraph indent
 \setlength{\parindent}{\docparindent}
 
+% Paragraph spacing between them
+\setlength{\parskip}{\docparspacing}
+
 % Supress warnings
 \pgfplotsset{compat=1.18}
 
