--- a/document.tex
+++ b/document.tex
@@ -34,7 +34,7 @@
 %%%%%%%%%%%%%%%%%
 % User Packages %
 %%%%%%%%%%%%%%%%%
-\usepackage{lipsum}
+%\usepackage{name}
 
 %%%%%%%%%%%%%%%%
 % Bibliography %
@@ -46,8 +46,11 @@
     % \bibitem{key}
     % Text
 
+    % Please cite the source if used :)
     \bibitem{template}
-    TUGraz \LaTeX \space Template, Ernesto Martínez García \texttt{<\randomize{me@ecomaikgolf.com}>}, \url{https://github.com/ecomaikgolf/tugraz-latex-template}
+        TUGraz \LaTeX \space Template, Ernesto Martínez García 
+          \texttt{\small <\randomize{me@ecomaikgolf.com}>},
+          \url{https://github.com/ecomaikgolf/tugraz-latex-template}
 
   \end{thebibliography}
 \fi
@@ -59,35 +62,8 @@
 \usepackage{config/tugraz-template}
 \begin{document}
 
-% \fig{file}{size}{caption}{label}
-% \figtwo{file1}{size1}{caption1}{label1}{file2}{size2}{caption2}{label2}{label}
-%
-% {
-% \begin{code}[title]
-% \end{code}
-% \captionof{lstlisting}{Code}
-% }
-%
-% {
-% \begin{terminal}[title]
-% \end{terminal}
-% \captionof{term}{caption}
-% }
-%
-% \begin{twocols}
-% \end{twocols}
-% \begin{threecols}
-% \end{threecols}
-% \begin{fourcols}
-% \end{fourcols}
-% \begin{ncols}{n}
-% \end{ncols}
-%
-% As seen in \autoref{label}
-%
-% \begin{code}[title]
-%     int a; ¡\cb{1}¡
-% \end{code}
-% In \tb{1} we create an int
+% For the experienced LaTeX user, don't use default enviroments 
+% like lstlisting for code. This template uses custom enviroments.
+% Please view https://github.com/ecomaikgolf/tugraz-latex-template#advanced-usage
 
 \end{document}
